force-app/main/default/objects/OBInvoiceItem__c/OBInvoiceItem__c.object-meta.xml
<CustomObject>
    <label>OB Invoice Item</label>
    <nameField>
        <displayFormat>OBInvItem-{00000000}</displayFormat>
        <label>Invoice Item (New) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OB Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>