force-app/main/default/objects/OBInvoiceItem__c/fields/AccountingPeriod__c.field-meta.xml
<CustomField>
    <fullName>AccountingPeriod__c</fullName>
    <label>Accounting Period</label>
    <type>Date</type>
</CustomField>