force-app/main/default/objects/OBInvoiceItem__c/fields/ChargeAmount__c.field-meta.xml
<CustomField>
    <fullName>ChargeAmount__c</fullName>
    <label>Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>