force-app/main/default/objects/OBInvoiceItem__c/fields/ChargeName__c.field-meta.xml
<CustomField>
    <fullName>ChargeName__c</fullName>
    <label>Charge Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>