force-app/main/default/objects/OBInvoiceItem__c/fields/Inv_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>Inv_ExternalID__c</fullName>
    <label>NetSuite Invoice External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>