force-app/main/default/objects/OBInvoiceItem__c/fields/InvoiceName__c.field-meta.xml
<CustomField>
    <fullName>InvoiceName__c</fullName>
    <label>Invoice Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>