force-app/main/default/objects/OBInvoiceItem__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>