force-app/main/default/objects/OBInvoiceItem__c/fields/Salesorder_Number__c.field-meta.xml
<CustomField>
    <fullName>Salesorder_Number__c</fullName>
    <label>Salesorder Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>