force-app/main/default/objects/OBInvoiceItem__c/fields/SubscriptionLineItem__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Line Item</label>
    <referenceTo>SubscriptionLineItem__c</referenceTo>
    <relationshipLabel>OB Invoice Items</relationshipLabel>
    <relationshipName>OB_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>