force-app/main/default/objects/OBInvoiceItem__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2473</description>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>