force-app/main/default/objects/OBInvoiceItem__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>Unit Price</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>