force-app/main/default/objects/OBInvoiceItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>InvoiceDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>